k8s/ingress-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-microk8s-controller
  namespace: ingress
spec:
  type: NodePort
  externalIPs:
    - 185.216.27.229
  selector:
    name: nginx-ingress-microk8s
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32180
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 32181
